--- a/web/styles/main.scss
+++ b/web/styles/main.scss
@@ -4,7 +4,13 @@
 
 @import "mdl-switch";
 @import "flexbox";
-@import url(https://fonts.googleapis.com/css?family=Kalam:700&subset=latin,latin-ext);
+
+@font-face {
+  font-family: 'Kalam';
+  font-style: normal;
+  font-weight: 700;
+  src: local('Kalam Bold'), local('Kalam-Bold'), url(styles/Kalam.woff2) format('woff2');
+}
 
 @mixin transition($transition...) {
     -moz-transition:    $transition;
@@ -14,6 +20,7 @@
 }
 
 $themeColor: #4CAF50;
+$themeColorLight: #E8F5E9;
 $errorColor: #F44336;
 $warningColor: #FFF59D;
 
@@ -121,7 +128,7 @@ main {
     @include align-self(center);
 
     #filip-message-bubble {
-      background: #E8F5E9;
+      background: $themeColorLight;
       border-radius: 10px;
       padding: 10px 20px;
       margin: 10px 0;
@@ -179,6 +186,21 @@ main {
       max-width:100%;
       max-height:100%;
     }
+  }
+}
+
+
+.post-talk-update {
+  margin-top: 50px;
+
+  strong {
+    //background: $themeColorLight;
+    color: $themeColor;
+    padding-right: 5px;
+  }
+
+  a {
+    color: $themeColor;
   }
 }
 
